# Traces-Serialiser

./: .clang-format  CMakeLists.txt  README.md
bindings/: CMakeLists.txt  Traces_Serialiser.i
bindings/python/: CMakeLists.txt
cmake/: Third_Party.cmake
doc/: CMakeLists.txt  Doxyfile.in
src/: CMakeLists.txt  Traces_Serialiser.hpp
test/: CMakeLists.txt  Test_Adding_Traces.hpp  Test_Constructors.hpp  Test_Different_Length_Traces.hpp  Test_Traces_Serialiser.cpp  Test_Traces_Serialiser.hpp  Test_Traces_Types.hpp  Tests.cpp
